--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
         }
         .container {
             max-width: 600px;
-            margin: 0 auto;
+            margin: 0.5em auto;
             padding: 20px;
             background-color: #fff;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -41,6 +41,7 @@
             border-radius: 4px;
             font-size: 16px;
             cursor: pointer;
+            margin: 0.5em;
         }
         button:hover {
             background-color: #0056b3;
@@ -57,7 +58,6 @@
             margin: 1em auto;
         }
         .hidden{
-            
             display: none;
         }
         #resetButton{
@@ -81,7 +81,6 @@
         </div>
         <button class="hidden" id="resetButton" onclick="reset()">Reset</button>
     </div>
-
 
     <script>
         function reset(){
